# ai-101-fed

./: .gitignore  08_mapping_workbook.xlsx  08_workloads.pptx  README.md
notebooks/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
notebooks/.claude/: README.md
notebooks/.claude/agents/: api-designer.md  architect-reviewer.md  backend-developer.md  code-reviewer.md  code-simplifier.md  compliance-auditor.md  coverage-analyzer.md  database-administrator.md  debugger.md  documentation-engineer.md  frontend-developer.md  fullstack-developer.md  mobile-developer.md  performance-engineer.md  principled-coder.md  qa-expert.md  refactoring-specialist.md  security-engineer.md  spec-execution-agent.md  spec-intake-validator.md  spec-loader.md  spec-processor.md  spec-product-manager.md  spec-type-detector.md  (+5 more)
notebooks/data/: build_05_identity_data.py  build_adaptation_data.py  build_context_engineering_data.py  build_harness_fixtures.py  build_nb02.py  build_nb03.py  build_nb04.py  build_nb06.py  build_nb07.py  build_skills_04.py
notebooks/identities/: ir_aggressive.md  ir_conservative.md  marcus_reyes.md  sarah_chen.md  sarah_chen__prelesson.md  your_name.md
notebooks/notebooks/: 00_setup.ipynb  01_context_engineering.ipynb  02_agentic_loop.ipynb  03_harness.ipynb  04_skills.ipynb  05_identity.ipynb  06_workflows.ipynb  07_adaptation.ipynb  08_security_at_runtime.ipynb  09_coding_workflow.ipynb  10_your_workflow.ipynb  roadshow.py  roadshow_viz.py
notebooks/scripts/: docker-entrypoint.sh  run-docker.sh  scrap_rollup.py  setup.sh
(+626 files in other folders)
